--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.5",
     "@openzeppelin/hardhat-upgrades": "^3.0.3",
     "dotenv": "^16.4.1",
     "ethers": "^6.10.0",
     "hardhat": "^2.22.2",
+    "hardhat-deploy": "^0.12.2",
     "tsx": "^4.7.0"
   },
   "dependencies": {
